added md file `FINAL-APP-DESCRIPTION.md` with strategy for the app and how it will use the final dataset.

--- a/notebooks/city-exploration.ipynb
+++ b/notebooks/city-exploration.ipynb
@@ -352,36 +352,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "european_countries = [\n",
-    "    'Germany', 'France', 'Spain', 'Italy', 'The Netherlands', 'Belgium', 'Greece',\n",
-    "    'Portugal', 'Austria', 'Switzerland', 'Sweden', 'Norway', 'Denmark', 'Finland',\n",
-    "    'Poland', 'Czech Republic', 'Hungary', 'Slovakia', 'Slovenia', 'Croatia',\n",
-    "    'Ireland', 'United Kingdom'\n",
-    "]\n",
-    "\n",
-    "# Count cities in USA, Canada, Europe\n",
-    "usa_cities = df[df['Country'] == 'United States']['City'].nunique()\n",
-    "canada_cities = df[df['Country'] == 'Canada']['City'].nunique()\n",
-    "europe_cities = df[df['Country'].isin(european_countries)]['City'].nunique()\n",
-    "\n",
-    "print(f\"Number of cities in USA: {usa_cities}\")\n",
-    "print(f\"Number of cities in Canada: {canada_cities}\")\n",
-    "print(f\"Number of cities in Europe: {europe_cities}\")"
+    "cities_to_explore = [\n",
+    "    \"New York City\",\n",
+    "    \""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdd9cd9c",
+   "cell_type": "markdown",
+   "id": "134dbff0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Number of data rows per city\n",
-    "city_counts = df.groupby('City').size().sort_values(ascending=False)\n",
+    "Country United States: 141 listings\n",
     "\n",
-    "print(\"Number of data rows for each city:\")\n",
-    "for city, count in city_counts.items():\n",
-    "    print(f\"{city}: {count}\")"
+    "City\n",
+    "\n",
+    "New York City         12\n",
+    "Dallas                11\n",
+    "Los Angeles            4\n",
+    "San Francisco          4\n",
+    "Portland               4\n",
+    "New Orleans            4\n",
+    "Boston                 4\n",
+    "\n",
+    "Toronto          11\n",
+    "Vancouver        11\n",
+    "Victoria         11\n",
+    "\n",
+    "Brisbane                11\n",
+    "Sunshine Coast          11\n",
+    "Barossa Valley           4\n",
+    "Tasmania                 4"
    ]
   }
  ],
